y.output
Terminals unused in grammar

   DESDE


State 52 conflicts: 2 reduce/reduce
State 63 conflicts: 17 reduce/reduce
State 64 conflicts: 1 shift/reduce


Grammar

    0 $accept: programa $end

    1 programa: CABECERA bloque

    2 bloque: INIBLOQUE declar_variables_locales declar_subprogs sentencias FINBLOQUE

    3 declar_subprogs: declar_subprogs declar_subprog
    4                | %empty

    5 declar_subprog: cabecera_subprog bloque

    6 declar_variables_locales: INIVARIABLES variables_locales FINVARIABLES
    7                         | %empty

    8 variables_locales: variables_locales cuerpo_declar_variables
    9                  | cuerpo_declar_variables

   10 cuerpo_declar_variables: tipo lista_identificadores FINLINEA
   11                        | tipo sentencia_asignacion
   12                        | error

   13 lista_identificadores: lista_identificadores COMA IDENTIFICADOR
   14                      | IDENTIFICADOR

   15 cabecera_subprog: tipo IDENTIFICADOR PARIZQ lista_parametros PARDER

   16 sentencias: sentencias sentencia
   17           | sentencia

   18 sentencia: bloque
   19          | sentencia_asignacion
   20          | sentencia_if
   21          | sentencia_while
   22          | sentencia_entrada
   23          | sentencia_salida
   24          | sentencia_return
   25          | sentencia_for
   26          | funcion FINLINEA

   27 sentencia_asignacion: IDENTIFICADOR ASIGNACION exp_cad FINLINEA

   28 sentencia_if: CONDICION PARIZQ expresion PARDER sentencia SUBCONDICION sentencia
   29             | CONDICION PARIZQ expresion PARDER sentencia

   30 sentencia_while: CICLO PARIZQ expresion PARDER sentencia

   31 sentencia_entrada: ENTRADA lista_variables FINLINEA

   32 sentencia_salida: SALIDA lista_exp_cadena FINLINEA

   33 sentencia_return: RETURN expresion FINLINEA

   34 sentencia_for: BUCLE IDENTIFICADOR DOSPUNTOSIGUAL expresion HASTA expresion PASO expresion sentencia

   35 lista_parametros: lista_parametros COMA tipo IDENTIFICADOR
   36                 | tipo IDENTIFICADOR

   37 lista_exp_cadena: lista_exp_cadena COMA exp_cad
   38                 | exp_cad

   39 exp_cad: expresion
   40        | CADENA

   41 lista_variables: lista_variables COMA IDENTIFICADOR
   42                | IDENTIFICADOR

   43 lista_expresiones: lista_expresiones COMA expresion
   44                  | expresion

   45 expresion: PARIZQ expresion PARDER
   46          | OPUNARIO expresion
   47          | SIGNO expresion
   48          | expresion SIGNO expresion
   49          | expresion OPBINARIO expresion
   50          | IDENTIFICADOR
   51          | lista
   52          | constante
   53          | funcion
   54          | expresion OPTERNARIO_1 expresion OPTERNARIO_2 expresion

   55 funcion: IDENTIFICADOR PARIZQ lista_expresiones PARDER

   56 constante: signo ENTERO
   57          | signo REAL
   58          | CONSTANTE_CARACTER
   59          | CONSTANTE_BOOLEANA

   60 lista: ABRIRCORCHETE lista CERRARCORCHETE
   61      | lista COMA constante
   62      | constante

   63 tipo: TIPO
   64     | LISTA_DE TIPO

   65 signo: SIGNO
   66      | %empty


Terminals, with rules where they appear

$end (0) 0
error (256) 12
CABECERA (258) 1
IDENTIFICADOR (259) 13 14 15 27 34 35 36 41 42 50 55
OPBINARIO (260) 49
OPTERNARIO_1 (261) 54
OPTERNARIO_2 (262) 54
SIGNO (263) 47 48 65
ENTERO (264) 56
REAL (265) 57
TIPO (266) 63 64
BUCLE (267) 34
DESDE (268)
HASTA (269) 34
PASO (270) 34
CONDICION (271) 28 29
SUBCONDICION (272) 28
CICLO (273) 30
ASIGNACION (274) 27
ENTRADA (275) 31
SALIDA (276) 32
RETURN (277) 33
INIBLOQUE (278) 2
FINBLOQUE (279) 2
INIVARIABLES (280) 6
FINVARIABLES (281) 6
CONSTANTE_BOOLEANA (282) 59
CADENA (283) 40
CONSTANTE_CARACTER (284) 58
PARIZQ (285) 15 28 29 30 45 55
PARDER (286) 15 28 29 30 45 55
COMA (287) 13 35 37 41 43 61
FINLINEA (288) 10 26 27 31 32 33
DOSPUNTOSIGUAL (289) 34
ABRIRCORCHETE (290) 60
CERRARCORCHETE (291) 60
OPUNARIO (292) 46
LISTA_DE (293) 64


Nonterminals, with rules where they appear

$accept (39)
    on left: 0
programa (40)
    on left: 1, on right: 0
bloque (41)
    on left: 2, on right: 1 5 18
declar_subprogs (42)
    on left: 3 4, on right: 2 3
declar_subprog (43)
    on left: 5, on right: 3
declar_variables_locales (44)
    on left: 6 7, on right: 2
variables_locales (45)
    on left: 8 9, on right: 6 8
cuerpo_declar_variables (46)
    on left: 10 11 12, on right: 8 9
lista_identificadores (47)
    on left: 13 14, on right: 10 13
cabecera_subprog (48)
    on left: 15, on right: 5
sentencias (49)
    on left: 16 17, on right: 2 16
sentencia (50)
    on left: 18 19 20 21 22 23 24 25 26, on right: 16 17 28 29 30 34
sentencia_asignacion (51)
    on left: 27, on right: 11 19
sentencia_if (52)
    on left: 28 29, on right: 20
sentencia_while (53)
    on left: 30, on right: 21
sentencia_entrada (54)
    on left: 31, on right: 22
sentencia_salida (55)
    on left: 32, on right: 23
sentencia_return (56)
    on left: 33, on right: 24
sentencia_for (57)
    on left: 34, on right: 25
lista_parametros (58)
    on left: 35 36, on right: 15 35
lista_exp_cadena (59)
    on left: 37 38, on right: 32 37
exp_cad (60)
    on left: 39 40, on right: 27 37 38
lista_variables (61)
    on left: 41 42, on right: 31 41
lista_expresiones (62)
    on left: 43 44, on right: 43 55
expresion (63)
    on left: 45 46 47 48 49 50 51 52 53 54, on right: 28 29 30 33 34
    39 43 44 45 46 47 48 49 54
funcion (64)
    on left: 55, on right: 26 53
constante (65)
    on left: 56 57 58 59, on right: 52 61 62
lista (66)
    on left: 60 61 62, on right: 51 60 61
tipo (67)
    on left: 63 64, on right: 10 11 15 35 36
signo (68)
    on left: 65 66, on right: 56 57


State 0

    0 $accept: . programa $end

    CABECERA  shift, and go to state 1

    programa  go to state 2


State 1

    1 programa: CABECERA . bloque

    INIBLOQUE  shift, and go to state 3

    bloque  go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 bloque: INIBLOQUE . declar_variables_locales declar_subprogs sentencias FINBLOQUE

    INIVARIABLES  shift, and go to state 6

    $default  reduce using rule 7 (declar_variables_locales)

    declar_variables_locales  go to state 7


State 4

    1 programa: CABECERA bloque .

    $default  reduce using rule 1 (programa)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    6 declar_variables_locales: INIVARIABLES . variables_locales FINVARIABLES

    error     shift, and go to state 8
    TIPO      shift, and go to state 9
    LISTA_DE  shift, and go to state 10

    variables_locales        go to state 11
    cuerpo_declar_variables  go to state 12
    tipo                     go to state 13


State 7

    2 bloque: INIBLOQUE declar_variables_locales . declar_subprogs sentencias FINBLOQUE

    $default  reduce using rule 4 (declar_subprogs)

    declar_subprogs  go to state 14


State 8

   12 cuerpo_declar_variables: error .

    $default  reduce using rule 12 (cuerpo_declar_variables)


State 9

   63 tipo: TIPO .

    $default  reduce using rule 63 (tipo)


State 10

   64 tipo: LISTA_DE . TIPO

    TIPO  shift, and go to state 15


State 11

    6 declar_variables_locales: INIVARIABLES variables_locales . FINVARIABLES
    8 variables_locales: variables_locales . cuerpo_declar_variables

    error         shift, and go to state 8
    TIPO          shift, and go to state 9
    FINVARIABLES  shift, and go to state 16
    LISTA_DE      shift, and go to state 10

    cuerpo_declar_variables  go to state 17
    tipo                     go to state 13


State 12

    9 variables_locales: cuerpo_declar_variables .

    $default  reduce using rule 9 (variables_locales)


State 13

   10 cuerpo_declar_variables: tipo . lista_identificadores FINLINEA
   11                        | tipo . sentencia_asignacion

    IDENTIFICADOR  shift, and go to state 18

    lista_identificadores  go to state 19
    sentencia_asignacion   go to state 20


State 14

    2 bloque: INIBLOQUE declar_variables_locales declar_subprogs . sentencias FINBLOQUE
    3 declar_subprogs: declar_subprogs . declar_subprog

    IDENTIFICADOR  shift, and go to state 21
    TIPO           shift, and go to state 9
    BUCLE          shift, and go to state 22
    CONDICION      shift, and go to state 23
    CICLO          shift, and go to state 24
    ENTRADA        shift, and go to state 25
    SALIDA         shift, and go to state 26
    RETURN         shift, and go to state 27
    INIBLOQUE      shift, and go to state 3
    LISTA_DE       shift, and go to state 10

    bloque                go to state 28
    declar_subprog        go to state 29
    cabecera_subprog      go to state 30
    sentencias            go to state 31
    sentencia             go to state 32
    sentencia_asignacion  go to state 33
    sentencia_if          go to state 34
    sentencia_while       go to state 35
    sentencia_entrada     go to state 36
    sentencia_salida      go to state 37
    sentencia_return      go to state 38
    sentencia_for         go to state 39
    funcion               go to state 40
    tipo                  go to state 41


State 15

   64 tipo: LISTA_DE TIPO .

    $default  reduce using rule 64 (tipo)


State 16

    6 declar_variables_locales: INIVARIABLES variables_locales FINVARIABLES .

    $default  reduce using rule 6 (declar_variables_locales)


State 17

    8 variables_locales: variables_locales cuerpo_declar_variables .

    $default  reduce using rule 8 (variables_locales)


State 18

   14 lista_identificadores: IDENTIFICADOR .
   27 sentencia_asignacion: IDENTIFICADOR . ASIGNACION exp_cad FINLINEA

    ASIGNACION  shift, and go to state 42

    $default  reduce using rule 14 (lista_identificadores)


State 19

   10 cuerpo_declar_variables: tipo lista_identificadores . FINLINEA
   13 lista_identificadores: lista_identificadores . COMA IDENTIFICADOR

    COMA      shift, and go to state 43
    FINLINEA  shift, and go to state 44


State 20

   11 cuerpo_declar_variables: tipo sentencia_asignacion .

    $default  reduce using rule 11 (cuerpo_declar_variables)


State 21

   27 sentencia_asignacion: IDENTIFICADOR . ASIGNACION exp_cad FINLINEA
   55 funcion: IDENTIFICADOR . PARIZQ lista_expresiones PARDER

    ASIGNACION  shift, and go to state 42
    PARIZQ      shift, and go to state 45


State 22

   34 sentencia_for: BUCLE . IDENTIFICADOR DOSPUNTOSIGUAL expresion HASTA expresion PASO expresion sentencia

    IDENTIFICADOR  shift, and go to state 46


State 23

   28 sentencia_if: CONDICION . PARIZQ expresion PARDER sentencia SUBCONDICION sentencia
   29             | CONDICION . PARIZQ expresion PARDER sentencia

    PARIZQ  shift, and go to state 47


State 24

   30 sentencia_while: CICLO . PARIZQ expresion PARDER sentencia

    PARIZQ  shift, and go to state 48


State 25

   31 sentencia_entrada: ENTRADA . lista_variables FINLINEA

    IDENTIFICADOR  shift, and go to state 49

    lista_variables  go to state 50


State 26

   32 sentencia_salida: SALIDA . lista_exp_cadena FINLINEA

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CADENA              shift, and go to state 54
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    lista_exp_cadena  go to state 59
    exp_cad           go to state 60
    expresion         go to state 61
    funcion           go to state 62
    constante         go to state 63
    lista             go to state 64
    signo             go to state 65


State 27

   33 sentencia_return: RETURN . expresion FINLINEA

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    expresion  go to state 66
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 28

   18 sentencia: bloque .

    $default  reduce using rule 18 (sentencia)


State 29

    3 declar_subprogs: declar_subprogs declar_subprog .

    $default  reduce using rule 3 (declar_subprogs)


State 30

    5 declar_subprog: cabecera_subprog . bloque

    INIBLOQUE  shift, and go to state 3

    bloque  go to state 67


State 31

    2 bloque: INIBLOQUE declar_variables_locales declar_subprogs sentencias . FINBLOQUE
   16 sentencias: sentencias . sentencia

    IDENTIFICADOR  shift, and go to state 21
    BUCLE          shift, and go to state 22
    CONDICION      shift, and go to state 23
    CICLO          shift, and go to state 24
    ENTRADA        shift, and go to state 25
    SALIDA         shift, and go to state 26
    RETURN         shift, and go to state 27
    INIBLOQUE      shift, and go to state 3
    FINBLOQUE      shift, and go to state 68

    bloque                go to state 28
    sentencia             go to state 69
    sentencia_asignacion  go to state 33
    sentencia_if          go to state 34
    sentencia_while       go to state 35
    sentencia_entrada     go to state 36
    sentencia_salida      go to state 37
    sentencia_return      go to state 38
    sentencia_for         go to state 39
    funcion               go to state 40


State 32

   17 sentencias: sentencia .

    $default  reduce using rule 17 (sentencias)


State 33

   19 sentencia: sentencia_asignacion .

    $default  reduce using rule 19 (sentencia)


State 34

   20 sentencia: sentencia_if .

    $default  reduce using rule 20 (sentencia)


State 35

   21 sentencia: sentencia_while .

    $default  reduce using rule 21 (sentencia)


State 36

   22 sentencia: sentencia_entrada .

    $default  reduce using rule 22 (sentencia)


State 37

   23 sentencia: sentencia_salida .

    $default  reduce using rule 23 (sentencia)


State 38

   24 sentencia: sentencia_return .

    $default  reduce using rule 24 (sentencia)


State 39

   25 sentencia: sentencia_for .

    $default  reduce using rule 25 (sentencia)


State 40

   26 sentencia: funcion . FINLINEA

    FINLINEA  shift, and go to state 70


State 41

   15 cabecera_subprog: tipo . IDENTIFICADOR PARIZQ lista_parametros PARDER

    IDENTIFICADOR  shift, and go to state 71


State 42

   27 sentencia_asignacion: IDENTIFICADOR ASIGNACION . exp_cad FINLINEA

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CADENA              shift, and go to state 54
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    exp_cad    go to state 72
    expresion  go to state 61
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 43

   13 lista_identificadores: lista_identificadores COMA . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 73


State 44

   10 cuerpo_declar_variables: tipo lista_identificadores FINLINEA .

    $default  reduce using rule 10 (cuerpo_declar_variables)


State 45

   55 funcion: IDENTIFICADOR PARIZQ . lista_expresiones PARDER

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    lista_expresiones  go to state 74
    expresion          go to state 75
    funcion            go to state 62
    constante          go to state 63
    lista              go to state 64
    signo              go to state 65


State 46

   34 sentencia_for: BUCLE IDENTIFICADOR . DOSPUNTOSIGUAL expresion HASTA expresion PASO expresion sentencia

    DOSPUNTOSIGUAL  shift, and go to state 76


State 47

   28 sentencia_if: CONDICION PARIZQ . expresion PARDER sentencia SUBCONDICION sentencia
   29             | CONDICION PARIZQ . expresion PARDER sentencia

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    expresion  go to state 77
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 48

   30 sentencia_while: CICLO PARIZQ . expresion PARDER sentencia

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    expresion  go to state 78
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 49

   42 lista_variables: IDENTIFICADOR .

    $default  reduce using rule 42 (lista_variables)


State 50

   31 sentencia_entrada: ENTRADA lista_variables . FINLINEA
   41 lista_variables: lista_variables . COMA IDENTIFICADOR

    COMA      shift, and go to state 79
    FINLINEA  shift, and go to state 80


State 51

   50 expresion: IDENTIFICADOR .
   55 funcion: IDENTIFICADOR . PARIZQ lista_expresiones PARDER

    PARIZQ  shift, and go to state 45

    $default  reduce using rule 50 (expresion)


State 52

   47 expresion: SIGNO . expresion
   65 signo: SIGNO .

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    ENTERO    reduce using rule 65 (signo)
    ENTERO    [reduce using rule 66 (signo)]
    REAL      reduce using rule 65 (signo)
    REAL      [reduce using rule 66 (signo)]
    $default  reduce using rule 65 (signo)

    expresion  go to state 81
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 53

   59 constante: CONSTANTE_BOOLEANA .

    $default  reduce using rule 59 (constante)


State 54

   40 exp_cad: CADENA .

    $default  reduce using rule 40 (exp_cad)


State 55

   58 constante: CONSTANTE_CARACTER .

    $default  reduce using rule 58 (constante)


State 56

   45 expresion: PARIZQ . expresion PARDER

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    expresion  go to state 82
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 57

   60 lista: ABRIRCORCHETE . lista CERRARCORCHETE

    SIGNO               shift, and go to state 83
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    ABRIRCORCHETE       shift, and go to state 57

    $default  reduce using rule 66 (signo)

    constante  go to state 84
    lista      go to state 85
    signo      go to state 65


State 58

   46 expresion: OPUNARIO . expresion

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    expresion  go to state 86
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 59

   32 sentencia_salida: SALIDA lista_exp_cadena . FINLINEA
   37 lista_exp_cadena: lista_exp_cadena . COMA exp_cad

    COMA      shift, and go to state 87
    FINLINEA  shift, and go to state 88


State 60

   38 lista_exp_cadena: exp_cad .

    $default  reduce using rule 38 (lista_exp_cadena)


State 61

   39 exp_cad: expresion .
   48 expresion: expresion . SIGNO expresion
   49          | expresion . OPBINARIO expresion
   54          | expresion . OPTERNARIO_1 expresion OPTERNARIO_2 expresion

    OPBINARIO     shift, and go to state 89
    OPTERNARIO_1  shift, and go to state 90
    SIGNO         shift, and go to state 91

    $default  reduce using rule 39 (exp_cad)


State 62

   53 expresion: funcion .

    $default  reduce using rule 53 (expresion)


State 63

   52 expresion: constante .
   62 lista: constante .

    IDENTIFICADOR  reduce using rule 52 (expresion)
    IDENTIFICADOR  [reduce using rule 62 (lista)]
    OPBINARIO      reduce using rule 52 (expresion)
    OPBINARIO      [reduce using rule 62 (lista)]
    OPTERNARIO_1   reduce using rule 52 (expresion)
    OPTERNARIO_1   [reduce using rule 62 (lista)]
    OPTERNARIO_2   reduce using rule 52 (expresion)
    OPTERNARIO_2   [reduce using rule 62 (lista)]
    SIGNO          reduce using rule 52 (expresion)
    SIGNO          [reduce using rule 62 (lista)]
    BUCLE          reduce using rule 52 (expresion)
    BUCLE          [reduce using rule 62 (lista)]
    HASTA          reduce using rule 52 (expresion)
    HASTA          [reduce using rule 62 (lista)]
    PASO           reduce using rule 52 (expresion)
    PASO           [reduce using rule 62 (lista)]
    CONDICION      reduce using rule 52 (expresion)
    CONDICION      [reduce using rule 62 (lista)]
    CICLO          reduce using rule 52 (expresion)
    CICLO          [reduce using rule 62 (lista)]
    ENTRADA        reduce using rule 52 (expresion)
    ENTRADA        [reduce using rule 62 (lista)]
    SALIDA         reduce using rule 52 (expresion)
    SALIDA         [reduce using rule 62 (lista)]
    RETURN         reduce using rule 52 (expresion)
    RETURN         [reduce using rule 62 (lista)]
    INIBLOQUE      reduce using rule 52 (expresion)
    INIBLOQUE      [reduce using rule 62 (lista)]
    PARDER         reduce using rule 52 (expresion)
    PARDER         [reduce using rule 62 (lista)]
    COMA           reduce using rule 52 (expresion)
    COMA           [reduce using rule 62 (lista)]
    FINLINEA       reduce using rule 52 (expresion)
    FINLINEA       [reduce using rule 62 (lista)]
    $default       reduce using rule 52 (expresion)


State 64

   51 expresion: lista .
   61 lista: lista . COMA constante

    COMA  shift, and go to state 92

    COMA      [reduce using rule 51 (expresion)]
    $default  reduce using rule 51 (expresion)


State 65

   56 constante: signo . ENTERO
   57          | signo . REAL

    ENTERO  shift, and go to state 93
    REAL    shift, and go to state 94


State 66

   33 sentencia_return: RETURN expresion . FINLINEA
   48 expresion: expresion . SIGNO expresion
   49          | expresion . OPBINARIO expresion
   54          | expresion . OPTERNARIO_1 expresion OPTERNARIO_2 expresion

    OPBINARIO     shift, and go to state 89
    OPTERNARIO_1  shift, and go to state 90
    SIGNO         shift, and go to state 91
    FINLINEA      shift, and go to state 95


State 67

    5 declar_subprog: cabecera_subprog bloque .

    $default  reduce using rule 5 (declar_subprog)


State 68

    2 bloque: INIBLOQUE declar_variables_locales declar_subprogs sentencias FINBLOQUE .

    $default  reduce using rule 2 (bloque)


State 69

   16 sentencias: sentencias sentencia .

    $default  reduce using rule 16 (sentencias)


State 70

   26 sentencia: funcion FINLINEA .

    $default  reduce using rule 26 (sentencia)


State 71

   15 cabecera_subprog: tipo IDENTIFICADOR . PARIZQ lista_parametros PARDER

    PARIZQ  shift, and go to state 96


State 72

   27 sentencia_asignacion: IDENTIFICADOR ASIGNACION exp_cad . FINLINEA

    FINLINEA  shift, and go to state 97


State 73

   13 lista_identificadores: lista_identificadores COMA IDENTIFICADOR .

    $default  reduce using rule 13 (lista_identificadores)


State 74

   43 lista_expresiones: lista_expresiones . COMA expresion
   55 funcion: IDENTIFICADOR PARIZQ lista_expresiones . PARDER

    PARDER  shift, and go to state 98
    COMA    shift, and go to state 99


State 75

   44 lista_expresiones: expresion .
   48 expresion: expresion . SIGNO expresion
   49          | expresion . OPBINARIO expresion
   54          | expresion . OPTERNARIO_1 expresion OPTERNARIO_2 expresion

    OPBINARIO     shift, and go to state 89
    OPTERNARIO_1  shift, and go to state 90
    SIGNO         shift, and go to state 91

    $default  reduce using rule 44 (lista_expresiones)


State 76

   34 sentencia_for: BUCLE IDENTIFICADOR DOSPUNTOSIGUAL . expresion HASTA expresion PASO expresion sentencia

    IDENTIFICADOR       shift, and go to state 51
    SIGNO               shift, and go to state 52
    CONSTANTE_BOOLEANA  shift, and go to state 53
    CONSTANTE_CARACTER  shift, and go to state 55
    PARIZQ              shift, and go to state 56
    ABRIRCORCHETE       shift, and go to state 57
    OPUNARIO            shift, and go to state 58

    $default  reduce using rule 66 (signo)

    expresion  go to state 100
    funcion    go to state 62
    constante  go to state 63
    lista      go to state 64
    signo      go to state 65


State 77

   28 sentencia_if: CONDICION PARIZQ expresion . PARDER sentencia SUBCONDICION sentencia
   29             | CONDICION PARIZQ expresion . PARDER sentencia
   48 expresion: expresion . SIGNO expresion
   49          | expresion . OPBINARIO expresion
   54          | expresion . OPTERNARIO_1 expresion OPTERNARIO_2 expresion

    OPBINARIO     shift, and go to state 89
    OPTERNARIO_1  shift, and go to state 90
    SIGNO         shift, and go to state 91
    PARDER        shift, and go to state 101


State 78

   30 sentencia_while: CICLO PARIZQ expresion . PARDER sentencia
   48 expresion: expresion . SIGNO expresion
   49          | expresion . OPBINARIO expresion
   54          | expresion . OPTERNARIO_1 expresion OPTERNARIO_2 expresion

    OPBINARIO     shift, and go to state 89
    OPTERNARIO_1  shift, and go to state 90
    SIGNO         shift, and go to state 91
    PARDER        shift, and go to state 102


State 79

   41 lista_variables: lista_variables COMA . IDENTIFICADOR

    IDENTIFICADOR  shift, and go to state 103


State 80

   31 sentencia_entrada: ENTRADA lista_variables FINLINEA .

    $default  reduce using rule 31 (sentencia_entrada)


State 81

   47 expresion: SIGNO expresion .
   48          | expresion . SIGNO expresion
   49          | expresion . OPBINARIO expresion
   54          | expresion . OPTERNARIO_1 expresion OPTERNARIO_2 expresion

    OPTERNARIO_1  shift, and go to state 90

    $default  reduce using rule 47 (expresion)


State 82
